--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <li>On 2019-10-01, someone shared: "Yes, I took financial advice from a cartoon bear."</li>
             <li>On 2024-03-25, someone shared: "I became wealthy beyond my wildest dreams. The future beckons. "</li>
             <li>On 2024-03-03, someone shared: "Jacob’s ladder"</li>
+            <li>On 2024-08-02, someone shared: "beau, why did you leave? we had our future together, all thrown away over a bit too many drinks on the weekends?"</li>
 
         </ul>
     </div>
