--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
     <div class="container">
         <h1>Memory Lane</h1>
-        <p>Share your story, pick a moment, and be part of our collective journey.CLOSED ON 5/22/24 THANKS</p>
+        <p>Share your story, pick a moment, and be part of our collective journey.</p>
 
         <h2 id="write">Write Your Memory</h2>
         <textarea id="memory-text" placeholder="Share your memory (max 240 characters)" maxlength="240" required></textarea>
@@ -164,6 +164,6 @@
         }
     </script>
 
-    <footer>&copy; 2023-2024 Memory Lane</footer>
+    <footer>&copy; 2023-2025 Memory Lane</footer>
 </body>
 </html>
